history of zerovm hypervisor project. please note that only most important
news go here, otherwise github commits history can be used

2014-03-21 dmitri bortoq <bortoq@gmail.com>
  * channel: ZVM_SOCKETS removed

2014-02-04 dmitri bortoq <bortoq@gmail.com>
  * channel: a new zerovm flavor created: no networking. sources removed* as
    well and now channels restored to original design

2014-01-10 dmitri bortoq <bortoq@gmail.com>
  * git: "devel" contains "paypal version" now. which can be compiled
    with the sockets support (UNSAFE=ZVM_SOCKETS). it is disabled by default.

2013-11-28 dmitri bortoq <bortoq@gmail.com>
  * git: udt branch has removed from the repository
  * git: new branch "devel" has been added to the repository. "master"
    will contain stable zerovm build

2013-11-20 dmitri bortoq <bortoq@gmail.com>
  * channels: zerovm can be built with udt library instead of zeromq.
    make PREFETCH=udt
  * channels: zeromq library updated from version 2.2 to version 4.0.1

2011-09-17 dmitri bortoq <bortoq@gmail.com>
  * earlier versions history can be added by d'b
