@@ -1,6 +1,11 @@
 history of zerovm hypervisor project. please note that only most important
 news go here, otherwise github commits history can be used
 
+2014-03-31 dmitri bortoq <bortoq@gmail.com>
+  * memory: new user memory management replaced an old one. a lot of fields
+    removed from "nap" object (and sel_ldr.h). zvm_mprotect() from the new
+    api now fully supported by zerovm and replaced old zvm_jail / zvm_unjail
+
 2014-03-21 dmitri bortoq <bortoq@gmail.com>
   * channel: ZVM_SOCKETS removed
 
